# gene-harmony-analysis

./: .gitignore  CONTRIBUTING.md  README.md  alias_alias_collision_annotations.ipynb  collision_record_generation.ipynb  dgidb_gene_content_analysis.ipynb  gene_alias_pair_matching_analysis.ipynb  merged_alias_overlap_df_1.csv  merged_alias_overlap_df_2.csv  pyproject.toml  requirements-dev.txt  requirements.txt  sample_collision_record.yaml  test.yaml  total_alias_overlap.ipynb  uniprot.ipynb
Downloaded_files/: Alpaca_Amarmot_Amolly_Abison_Ablackbear_mart_export.txt  Americanmink_Arabiancamel_Arcticsquirrel_Argentinetegu_Armadillo_Asianbonytongue.txt  Atlanticcod_Atlanticherring_Atlanticsalmon_Australiancrocodile_Ballanwrasse.txt  Cat_Chacoanpeccary_Channelbullblenny_Channelcatfish_Chicken.txt  hgnc_biomart_gene20240626.txt  hgnc_custom_dl_20240828.txt  hgnc_genefamily.csv  hgnc_id_symbol_genegroupid.txt  mini_ensg_df.csv  mini_hgnc_df.csv  tortoise_ostrich_amouse_export.txt
alias-alias_collision_records/: ALP1_collision_record.yaml  ALP_collision_record.yaml  ASP_collision_record.yaml  CAP_collision_record.yaml  F379_collision_record.yaml  MYM_collision_record.yaml  NAP1_collision_record.yaml  P40_collision_record.yaml  PAP_collision_record.yaml  TR2_collision_record.yaml  U4_collision_record.yaml  sample_collision_record.yaml
alias-alias_collisions/: alias-alias_collision_analysis.ipynb
alias-primary collisions/: alias-primary_collision_analysis.ipynb
alias_alias_collisions/: alias-alias_collision_analysis.ipynb  merged_alias_overlap_df_2.csv  total_alias_overlap.ipynb
alias_primary collisions/: alias-primary_collision_analysis.ipynb  alias-primary_collision_analysis_old.ipynb  ensg_alias_gene_collision_set_copy.pkl
ambiguous_pubmed_abstract_analysis/: PMID per Collision.ipynb  aa_colliison_symbol_list.txt  aa_colliison_symbol_listpart1.txt  aa_colliison_symbol_listpart1a.txt  aa_colliison_symbol_listpart1b.txt  aa_colliison_symbol_listpart2.txt  abstract_counts_df.csv  pubmed_cache.sqlite  pubmed_results.csv
analysis/: 10_dgidb_gene_content_analysis.ipynb  11_dgidb_query_analysis.ipynb  1_alias_primary_collision_analysis.ipynb  2_alias_alias_collision_analysis.ipynb  3_alias_alias_collision_distribution_analysis.ipynb  4_symbol_capture_generation.ipynb  5_symbol_capture_analysis.ipynb  6_sqlite_symbol_capture_transformation.ipynb  7_ambiguous_symbol_distribution_analysis.ipynb  8_concordance_via_networkx_analysis.ipynb  9_concordance_via_upsetplot_analysis.ipynb  alt_abb_llm_0_add_samples_and_process.ipynb  alt_abb_llm_1_run_samples.ipynb  alt_abb_llm_2_analyze_results.ipynb  alt_abbrev_models.py  alternate_abbreviation_annotation_doc  alternate_abbreviation_categorization.ipynb  collision_analysis_shared_variables.py  collision_records_and_ambiguous_symbol_analysis.ipynb  data_pruning_multi_level_sankey.ipynb  lit_def_and_alt_abbrev_annotation_with_prompt_using_fulltext_df.xlsx  new_alternate_abbreviation_categorization.ipynb  ortholog.ipynb  stored_runs_t0p0_n3.pkl  test_lit_def_and_alt_abbrev_annotation_with_prompt_using_fulltext_df.xlsx
archive/: collision_record_generation.ipynb  old total_alias_overlap.ipynb  old_dgidb_gene_content_analysis.ipynb  total_alias_gene_intersections.ipynb
created_files/: ENSG_alias_count_histogram_df.csv  HGNC_alias_count_histogram_df.csv  NCBI_alias_count_histogram_df.csv  aa_collision_alias_ENSG_df.csv  aa_collision_alias_HGNC_df.csv  aa_collision_alias_NCBI_df.csv  aa_collision_ensg_count_df.csv  aa_collision_ensg_df.csv  aa_collision_ensg_distribution_df.csv  aa_collision_gene_ENSG_df.csv  aa_collision_gene_HGNC_df.csv  aa_collision_gene_NCBI_df.csv  aa_collision_hgnc_count_df.csv  aa_collision_hgnc_df.csv  aa_collision_hgnc_distribution_df.csv  aa_collision_ncbi_count_df.csv  aa_collision_ncbi_df.csv  aa_collision_ncbi_distribution_df.csv  ag_collision_ensg_df.csv  ag_collision_hgnc_df_w_entrez_id.csv  merged_aa_collision_alias_df.csv  merged_aa_collision_gene_df.csv  merged_alaises_ag_collision_ensg_df.csv  merged_alaises_ag_collision_hgnc_df.csv  merged_alaises_ag_collision_ncbi_df.csv  merged_alias_ENSG_df.csv  merged_alias_HGNC_df.csv  merged_alias_ap_collision_ensg_df.csv  merged_alias_ap_collision_hgnc_df.csv  merged_alias_ap_collision_ncbi_df.csv  merged_alias_gene_collisions_df.csv  merged_alias_gene_intersections.csv  merged_alias_overlap_df_1.csv  merged_alias_overlap_df_2.csv  merged_alias_primary_collisions_df.csv  (+9 more)
(+12515 files in other folders)
